Translations and changing purchase to be hidden
Break up layouts into partials

Create product overview page

Ensure that wine and olive oil page appears differently

Formatting

Always keep one section open

Correct 'no-product' pathing

Ensure that list have top borders, not bottom borders

Fix IE display issue

Make oils and wines conditional

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -24,139 +24,8 @@
 	<!-- Header -->
 	<header id="header">
 
-			<nav>
-				<div class="header-container">
-
-					<div class="logo">
-						<a href="{{ siteUrl }}">
-						<h1>{{ siteName }}</h1>
-						<h3>Fiesole, Italia</h3>
-						</a>
-					</div>
-					<ul class="navigation">
-						<li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'about' %}class="active"{% endif %}>{{"About" | translate}}</a></li>
-						<li><a href="{{ url('philosophy') }}" {% if craft.request.getSegment(1) == 'philosophy' %}class="active"{% endif %}>{{"Philosophy" | translate}}</a></li>
-						<li><a href="{{ url('vineyard') }}" {% if craft.request.getSegment(1) == 'vineyard' %}class="active"{% endif %}>{{"Vineyard" | translate}}</a></li>
-						<li><a href="{{ url('wine') }}" {% if craft.request.getSegment(1) == 'wine' %}class="active"{% endif %}>{{"Wines" | translate}}</a></li>
-						<li><a href="{{ url('olive-oil') }}" {% if craft.request.getSegment(1) == 'olive-oil' %}class="active"{% endif %}>{{"Olive Oil" | translate}}</a></li>
-						<li><a href="{{ url('news') }}" {% if craft.request.getSegment(1) == 'news' %}class="active"{% endif %}>{{"News" | translate}}</a></li>
-						<li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>{{"Contact" | translate}}</a></li>
-					</ul>
-					<div class="top-menu">
-						<ul class="localization">
-							<li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
-							<li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
-						</ul>
-						<div class="cart">
-							{% set cart = craft.commerce.cart %}
-							<a class="button {% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
-							  <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
-							</a>
-						</div>
-					</div>
-				</div>
-			</nav>
-
-			<div class="banners">
-				{% cache %}
-
-				{#
-				# Standard Page
-				#}
-
-				{% if craft.request.getSegment(1) != 'news' or craft.request.getSegment(1) != 'wines' %}
-
-					{% if craft.request.getSegment(1) %}
-						{% set page_id = craft.request.getSegment(1)  %}
-					{% else %}
-						{% set page_id = 'home' %}
-					{% endif %}
-
-					{% for entry in craft.entries.section('pages').slug(page_id) %}
-						{% for banner in entry.pageBanner %}
-
-							{% if craft.request.getSegment(1) != '' %}
-							<div class="banner slide {% if loop.index == 1 %}active{% endif %}" style="background-image: url({{ banner.bannerImage.first().getUrl('siteBanner') }}) ">
-							{% else %}
-							<div class="banner slide {% if loop.index == 1 %}active{% endif %}" style="background-image: url({{ banner.bannerImage.first().getUrl('homeBanner') }}) ">
-							{% endif %}
-
-								<div class="banner-headline-container">
-									<div class="banner-headline">{{ banner.bannerHeadline }}</div>
-								</div>
-							</div>
-
-						{% endfor %}
-						{% if entry.pageBanner|length > 1 %}
-							<ul class="arrows">
-								<li class="previous">Previous</li>
-								<li class="next">Next</li>
-							</ul>
-							<ul class="dots" style="margin-left: -{{ (30 * entry.pageBanner|length)/2 }}px">
-								{% for banner in entry.pageBanner %}
-									<li data-slide="{{ loop.index - 1}}" {% if loop.index == 1 %}class="active"{% endif %}></li>
-								{% endfor %}
-							</ul>
-						{% endif %}
-
-					{% endfor %}
-
-				{% endif %}
-
-				{#
-				# Wine Page
-				#}
-				{% if craft.request.getSegment(1) == 'wine' %}
-
-					<div class="banner" id="wine-page-banner">
-						<ul class="wine-browser">
-							{% spaceless %}
-							{% for product in craft.commerce.products.type('wine').order('postDate asc') %}
-								{% set assets = product.bottleTitleImage.first() %}
-								<li data-wine="{{ product.slug }}" {% if craft.request.getSegment(2) == product.slug %}class="active"{% endif %}>
-									<a href="{{product.slug}}">
-										{% if assets | length %}
-											<img src="{{ assets.getUrl() }}" alt="{{ product.title }}">
-										{% endif %}
-									</a>
-								</li>
-							{% endfor %}
-							{% endspaceless %}
-						</ul>
-					</div>
-
-				{% endif %}
-
-				{#
-				# Awards Page
-				#}
-				{% if craft.request.getSegment(1) == 'awards' %}
-
-					<div class="banner" id="awards-page-banner">
-
-						<div class="banner-headline-container">
-							<div class="banner-headline">{{ "Reviews" | translate }}</div>
-						</div>
-
-					</div>
-
-				{% endif %}
-				{#
-				# News Page
-				#}
-				{% if craft.request.getSegment(1) == 'news' %}
-
-					<div class="banner" id="news-page-banner">
-
-						<div class="banner-headline-container">
-							<div class="banner-headline">{{ "News And Updates" | translate }}</div>
-						</div>
-
-					</div>
-
-				{% endif %}
-			{% endcache %}
-			</div>
+			{% include 'partials/nav' %}
+			{% include 'partials/banners' %}
 
 	</header>
 
