--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -113,7 +113,7 @@
             {% endif %}
 
             {% if not cart.lineItems|length %}
-                <p>You have no items in your cart, add some on the <a href="/wine">products page</a>.</p>
+                <p>You have no items in your cart, add some on the <a href="/products">products page</a>.</p>
             {% endif %}
 
         </div>
