--- a/craft/templates/product.html
+++ b/craft/templates/product.html
@@ -7,17 +7,20 @@
   {% redirect craft.commerce.products.type('wine').order('postDate asc').first().url %}
 {% endif %}
 
-  <article class="page-content wine-page-content active" id="wine-{{ product.slug }}">
-    <div class="page-image wine-page-image">
+  <article class="page-content product-page-content">
+
+    <div class="page-image {{craft.request.getSegment(2)}}-page-image">
       <img src="{{ product.bottleImage.first().getUrl() }}" alt="">
     </div>
-    <div class="page-text wine-page-text">
+
+    <div class="page-text product-page-text">
       <h1>{{ product.title }}</h1>
       <div class="page-text-container">
 
         <h2>{{ "Description" | translate }}</h2>
         {{ product.wineDescription }}
 
+        {% if specification in product.wineSpecifications %}
         <h2>{{ "Specifications" | translate }}</h2>
         {% for specification in product.wineSpecifications %}
           <ul class="wine-specifications">
@@ -47,19 +50,47 @@
             </li>
           </ul>
         {% endfor %}
+        {% endif %}
 
+        {% if product.wineAdditionalDetails %}
         <h2>{{ "Additional" | translate }}</h2>
         {{ product.wineAdditionalDetails
           | replace('/<(.?)strong>/', '')
           | replace('/(?<=>)(.*?):/', "<strong>$1:</strong>")
           | raw }}
+        {% endif %}
 
+        <h2>{{ "Purchase" | t }}</h2>
         <div class="add-to-cart">
           {% include 'partials/add_product.html' %}
         </div>
 
       </div>
+      <div class="product-navigation">
+          {% set matched = false %}
+
+          {#
+          # Check for next product
+          #}
+          {% for item in craft.commerce.products.order('postDate asc') %}
+            {% if item.slug == product.slug and item.next.title is defined %}
+              {% set matched = true %}
+              <span>Next: <a href="{{item.next.url}}">{{item.next.title}}</a></span>
+            {% endif %}
+          {% endfor %}
+
+          {#
+          # Fallback at end of loop
+          #}
+          {% if not matched %}
+            {% set link = craft.commerce.products.order('postDate asc').first() %}
+            <span>Next: <a href="{{link.url}}">{{link.title}}</a></span>
+          {% endif %}
+
+          <span><a href="{{ url('products') }}">{{ "All" | t }} {{ "Products" | t }}</a></span>
+      </div>
     </div>
+
   </article>
 
 {% endcache %}
