Translations and changing purchase to be hidden

--- a/craft/templates/wine.html
+++ b/craft/templates/wine.html
@@ -54,6 +54,7 @@
           | replace('/(?<=>)(.*?):/', "<strong>$1:</strong>")
           | raw }}
 
+        <h2>{{ "Purchase" | t }}</h2>
         <div class="add-to-cart">
           {% include 'partials/add_product.html' %}
         </div>
