Appropriate use of get cart functionality

--- a/craft/templates/partials/add_product.html
+++ b/craft/templates/partials/add_product.html
@@ -1,3 +1,5 @@
+{% set cart = craft.commerce.cart %}
+
 <form method="POST">
   <input type="hidden" name="action" value="commerce/cart/updateCart">
   <input type="hidden" name="redirect" value="commerce/cart">
