Remove unneeded template files
Correct checkout process, so person can complete entire order

Break out footer and header

Converting tabs to spaces, and fixing formatting

Lots of changes to template structure and layouts

Further editing of shared styles, vs front end styles and commerce styles

Get meter working correctly, use correct orange, drop EM junk, and start in on styling

--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -1,122 +1,126 @@
-{% extends '_layout.html' %}
+{% extends '_layouts/_layout.html' %}
 
 {% block content %}
-    <div class="row">
-        <div class="twelve columns">
 
-            {% set cart = craft.commerce.cart %}
-            {% if cart.lineItems|length %}
-            <table class="u-full-width">
-                <thead>
-                <tr>
-                    <th>Product</th>
-                    <th>Qty</th>
-                    <th class="text-right">Price</th>
-                </tr>
-                </thead>
-                <tbody>
-                {% for item in cart.lineItems %}
-                    <tr>
-                        <td>
-                            <strong>{{ item.description }}</strong><br>
-                            <br>
-                            <form method="POST">
-                                <input type="hidden" name="action" value="commerce/cart/removeLineItem"/>
-                                <input type="hidden" name="redirect" value="commerce/cart"/>
-                                {{ getCsrfInput() }}
-                                <input type="hidden" name="lineItemId" value="{{ item.id }}"/>
-                                <input type="submit" class="button link" value="Remove"/>
-                            </form>
-                        </td>
-                        <td>
-                            <form method="POST">
-                                <input type="hidden" name="action" value="commerce/cart/updateLineItem">
-                                <input type="hidden" name="redirect" value="commerce/cart">
-                                <input type="hidden" name="lineItemId" value="{{ item.id }}">
-                                <span {% if item.getError('qty') %}class="has-error"{% endif %}>
-                                <input  type="number" name="qty" min="1" value="{{ item.qty }}">
-                                </span>
-                                {{ getCsrfInput() }}
-                                <input type="submit" class="button" value="Update"/>
-                            </form>
-                        </td>
-                        <td class="text-right">
-                            {% if item.onSale %}
-                                <s>Price: {{ item.price|currency(cart.currency) }}</s><br>
-                                Sale Off: {{ item.saleAmount|currency(cart.currency) }}<br>
-                                Sale Price {{ item.salePrice|currency(cart.currency) }}<br>
-                                Sale Price Subtotal: {{ item.subtotal|currency(cart.currency) }}<br>
-                            {% else %}
-                                Price: {{ item.price|currency(cart.currency) }}<br>
-                                Sale Price {{ item.salePrice|currency(cart.currency) }}<br>
-                                Sale Price Subtotal: {{ item.subtotal|currency(cart.currency) }}<br>
-                            {% endif %}
+  <div class="flash">{{ craft.session.getFlash('notice') }}</div>
+  <div class="flash">{{ craft.session.getFlash('error') }}</div>
 
-                            Discount: {{ item.discount|currency(cart.currency) }}<br>
-                            Taxes: {{ item.tax|currency(cart.currency) }}<br>
-                            Taxes (Inc): {{ item.taxIncluded|currency(cart.currency) }}<br>
-                            Shipping: {{ item.shippingCost|currency(cart.currency) }}<br>
-                            Total: {{ item.total|currency(cart.currency) }}<br>
-                        </td>
-                    </tr>
-                {% endfor %}
+  <div class="row">
+    <div class="twelve columns">
 
-                {% for adjustment in cart.adjustments %}
-                    <tr>
-                        <td>{{ adjustment.type }}
-                        </td>
-                        <td><strong>{{ adjustment.name }}</strong><br>({{ adjustment.description }})</td>
-                        <td class="text-right">{{ adjustment.amount|currency(cart.currency) }}</td>
-                    </tr>
-                {% endfor %}
+      {% set cart = craft.commerce.cart %}
+      {% if cart.lineItems|length %}
+      <table class="u-full-width">
+        <thead>
+          <tr>
+            <th>Product</th>
+            <th>Qty</th>
+            <th class="text-right">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in cart.lineItems %}
+          <tr>
+            <td>
+              <strong>{{ item.description }}</strong><br>
+              <br>
+              <form method="POST">
+                <input type="hidden" name="action" value="commerce/cart/removeLineItem"/>
+                <input type="hidden" name="redirect" value="commerce/cart"/>
+                {{ getCsrfInput() }}
+                <input type="hidden" name="lineItemId" value="{{ item.id }}"/>
+                <input type="submit" class="button link" value="Remove"/>
+              </form>
+            </td>
+            <td>
+              <form method="POST">
+                <input type="hidden" name="action" value="commerce/cart/updateLineItem">
+                <input type="hidden" name="redirect" value="commerce/cart">
+                <input type="hidden" name="lineItemId" value="{{ item.id }}">
+                <span {% if item.getError('qty') %}class="has-error"{% endif %}>
+                  <input  type="number" name="qty" min="1" value="{{ item.qty }}">
+                </span>
+                {{ getCsrfInput() }}
+                <input type="submit" class="button" value="Update"/>
+              </form>
+            </td>
+            <td class="text-right">
+              {% if item.onSale %}
+              <s>Price: {{ item.price|currency(cart.currency) }}</s><br>
+              Sale Off: {{ item.saleAmount|currency(cart.currency) }}<br>
+              Sale Price {{ item.salePrice|currency(cart.currency) }}<br>
+              Sale Price Subtotal: {{ item.subtotal|currency(cart.currency) }}<br>
+              {% else %}
+              Price: {{ item.price|currency(cart.currency) }}<br>
+              Sale Price {{ item.salePrice|currency(cart.currency) }}<br>
+              Sale Price Subtotal: {{ item.subtotal|currency(cart.currency) }}<br>
+              {% endif %}
 
-                <tr>
-                    <td>
-                        {# Remove all line items to empty the cart: #}
-                        <form method="POST">
-                            <input type="hidden" name="action" value="commerce/cart/removeAllLineItems"/>
-                            <input type="hidden" name="redirect" value="commerce/cart"/>
-                            {{ getCsrfInput() }}
-                            <input class="button link" type="submit" value="Empty the Cart"/>
-                        </form>
+              Discount: {{ item.discount|currency(cart.currency) }}<br>
+              Taxes: {{ item.tax|currency(cart.currency) }}<br>
+              Taxes (Inc): {{ item.taxIncluded|currency(cart.currency) }}<br>
+              Shipping: {{ item.shippingCost|currency(cart.currency) }}<br>
+              Total: {{ item.total|currency(cart.currency) }}<br>
+            </td>
+          </tr>
+          {% endfor %}
 
-                        {# Update Coupon form uses the single update controller action: #}
-                        {% if cart.getError('couponCode') %}<span class="flash">{{ cart.getError('couponCode') }}</span>{% endif %}
-                        <form method="POST">
-                            <input type="hidden" name="action" value="commerce/cart/updateCart">
-                            <input type="hidden" name="redirect" value="commerce/cart">
-                            {{ getCsrfInput() }}
-                            <span class="{% if cart.getError('couponCode') %}has-error{% endif %}">
-                            <input type="text" name="couponCode" width="11" class="{% if cart.getError('couponCode') %}has-error{% endif %}" value="{{ cart.couponCode }}" placeholder="{{ "Coupon Code"|t }}">
-							</span>
-                            <input type="submit" class="button" value="{% if cart.couponCode %}Change{% else %}Apply{% endif %} Coupon"/>
-                        </form>
+          {% for adjustment in cart.adjustments %}
+          <tr>
+            <td>{{ adjustment.type }}
+            </td>
+            <td><strong>{{ adjustment.name }}</strong><br>({{ adjustment.description }})</td>
+            <td class="text-right">{{ adjustment.amount|currency(cart.currency) }}</td>
+          </tr>
+          {% endfor %}
 
-                    </td>
-                    <td>
-                    </td>
-                    <td class="text-right">
-                        Total Discount: {{ cart.totalDiscount|currency(cart.currency) }}<br>
-                        Total Shipping: {{ cart.totalShippingCost|currency(cart.currency) }}<br>
-                        Total Tax: {{ cart.totalTax|currency(cart.currency) }}<br>
-                        Total Tax (inc): {{ cart.totalTaxIncluded|currency(cart.currency) }}<br>
-                        Item Total: {{ cart.itemTotal|currency(cart.currency) }}<br>
-                        Base Discount: {{ cart.baseDiscount|currency(cart.currency) }}<br>
-                        Base Shipping Cost: {{ cart.baseShippingCost|currency(cart.currency) }}<br>
-                        <h4>Total Price: {{ cart.totalPrice|currency(cart.currency) }}</h4>
-                    </td>
-                </tr>
+          <tr>
+            <td>
+              {# Remove all line items to empty the cart: #}
+              <form method="POST">
+                <input type="hidden" name="action" value="commerce/cart/removeAllLineItems"/>
+                <input type="hidden" name="redirect" value="commerce/cart"/>
+                {{ getCsrfInput() }}
+                <input class="button link" type="submit" value="Empty the Cart"/>
+              </form>
 
-                </tbody>
-            </table>
+              {# Update Coupon form uses the single update controller action: #}
+              {% if cart.getError('couponCode') %}<span class="flash">{{ cart.getError('couponCode') }}</span>{% endif %}
+              <form method="POST">
+                <input type="hidden" name="action" value="commerce/cart/updateCart">
+                <input type="hidden" name="redirect" value="commerce/cart">
+                {{ getCsrfInput() }}
+                <span class="{% if cart.getError('couponCode') %}has-error{% endif %}">
+                  <input type="text" name="couponCode" width="11" class="{% if cart.getError('couponCode') %}has-error{% endif %}" value="{{ cart.couponCode }}" placeholder="{{ "Coupon Code"|t }}">
+                </span>
+                <input type="submit" class="button" value="{% if cart.couponCode %}Change{% else %}Apply{% endif %} Coupon"/>
+              </form>
 
-            <a class="button button-primary" href="{{ url('commerce/checkout') }}">Checkout</a>
-            {% endif %}
+            </td>
+            <td>
+            </td>
+            <td class="text-right">
+              Total Discount: {{ cart.totalDiscount|currency(cart.currency) }}<br>
+              Total Shipping: {{ cart.totalShippingCost|currency(cart.currency) }}<br>
+              Total Tax: {{ cart.totalTax|currency(cart.currency) }}<br>
+              Total Tax (inc): {{ cart.totalTaxIncluded|currency(cart.currency) }}<br>
+              Item Total: {{ cart.itemTotal|currency(cart.currency) }}<br>
+              Base Discount: {{ cart.baseDiscount|currency(cart.currency) }}<br>
+              Base Shipping Cost: {{ cart.baseShippingCost|currency(cart.currency) }}<br>
+              <h4>Total Price: {{ cart.totalPrice|currency(cart.currency) }}</h4>
+            </td>
+          </tr>
 
-            {% if not cart.lineItems|length %}
-                <p>You have no items in your cart, add some on the <a href="/products">products page</a>.</p>
-            {% endif %}
+        </tbody>
+      </table>
 
-        </div>
+      <a class="button button-primary" href="{{ url('commerce/checkout') }}">Checkout</a>
+      {% endif %}
+
+      {% if not cart.lineItems|length %}
+      <p>You have no items in your cart, add some on the <a href="/products">products page</a>.</p>
+      {% endif %}
+
     </div>
+  </div>
 {% endblock %}
