--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -1,198 +1,8 @@
-@import "compass/reset"
 @import "compass/css3"
 @import "compass/utilities"
-@import "fonts"
-@import "mixins"
 
-// Variables
-
-$source : 'Source Sans Pro', sans-serif
-$wide-width: 1440px
-$medium-width: 1005px
-
-$header-tall: 770px
-$header-short: 360px
-$header-border: 30px
-
-$copper: #B24629
-$orange: #ED8F17
-$black: #333333
-
-$text-light-gray: #E2E2E2
-$text-gray: #999999
-$text-black: #333333
-
-$handwriting: "Nickyshand", Tahoma, Geneva, sans-serif
-$serif: "P22MackinacMedium", Georgia, serif
-$sans: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif
-
-body
-  background-color: #fff
-  color: $text-black
-  font-family: $serif
-
-%button
-  @include box-sizing('border-box')
-  cursor: pointer
-  height: 48px
-  border: 0
-  border-radius: 4px
-  background-color: $orange
-  font-weight: normal
-  padding: 0 25px
-  font-family: $sans
-  font-size: 28px
-  color: #fff
-  letter-spacing: 0.05em
-  &[disabled='disabled']
-    background-color: rgba($black, 0.4)
-    cursor: not-allowed
-
-// Header and Footer Work
-
-header
-  #home &
-    height: $header-tall
-  #commerce &
-    height: 120px
-  border-bottom: $header-border solid $copper
-  height: $header-short
-  display: block
-  .header-container
-    width: $medium-width
-    margin: 0 auto
-    position: relative
-  nav
-    background-color: rgba(0,0,0,0.35)
-    height: 120px
-    margin-bottom: -120px
-    z-index: 1
-    position: relative
-  .logo
-    h1, h3
-      text-indent: -10000px
-    a
-      width: 225px
-      height: 67px
-      display: block
-    width: 225px
-    height: 67px
-    background: image-url('site/logo.png') no-repeat 0 0
-    background-size: 100%
-    position: absolute
-    left: 50%
-    top: 8px
-    margin-left: -112px
-  .navigation
-    padding-top: 93px
-    display: block
-    width: 800px
-    margin: 0 auto
-    text-align: justify
-    &:after
-      width: 100%
-      display: inline-block
-      content: "."
-      visibility: hidden
-    li
-      display: inline-block
-      text-transform: uppercase
-    a
-      font-size: 17px
-      color: #fff
-      text-decoration: none
-      padding-bottom: 10px
-      &.active
-        border-bottom: 5px solid #fff
-
-
-.top-menu
-  position: absolute
-  top: 15px
-  right: 0
-  height: 25px
-  font-family: $sans
-  line-height: 26px
-  .localization
-    display: inline-block
-    vertical-align: top
-    li
-      padding: 0 12px
-      height: 25px
-      background: #fff
-      color: $text-gray
-      float: left
-      display: block
-      &.active
-        background: $copper
-        a
-          color: #fff
-      a
-        text-decoration: none
-        color: $text-gray
-  .cart
-    display: inline-block
-    vertical-align: top
-    margin-left: 15px
-    font-size: 16px
-    height: 100%
-    color: white
-    font-family: $sans
-    text-transform: uppercase
-    .fa
-      padding-right: 4px
-    a
-      color: white
-      text-decoration: none
-      display: block
-      height: 100%
-      span
-        @include box-sizing('border-box')
-        margin-left: 4px
-        margin-top: 3px
-        border-radius: 9px
-        background: $orange
-        display: inline-block
-        vertical-align: top
-        color: #fff
-        min-width: 19px
-        padding: 0 6px
-        height: 19px
-        line-height: 20px
-        font-size: 14px
-        text-align: center
-
-footer
-  #home &
-    padding-top: 14px
-  text-align: center
-  text-transform: uppercase
-  padding-top: 40px
-  margin-bottom: 50px
-  font-size: 14px
-  a
-    color: $black
-    text-decoration: none
-    &:hover
-      text-decoration: underline
-  ul
-    margin-bottom: 10px
-    li
-      display: inline-block
-      padding: 0 25px
-      border-right: 1px solid $text-black
-      &:last-child
-        border-right: none
-      &.facebook
-        a
-          text-indent: -10000px
-          background-image: image-url('site/facebook.png')
-          width: 18px
-          height: 18px
-          position: relative
-          top: -2px
-          display: inline-block
-          background-size: 100%
+@import "_mixins"
+@import "_variables"
 
 .banners
   height: 100%
