--- a/craft/templates/404.html
+++ b/craft/templates/404.html
@@ -16,7 +16,7 @@
  # http://buildwithcraft.com/docs/routing
  #}
 
-{% extends "_layout" %}
+{% extends "_layouts/_layout" %}
 {% set title = "404" %}
 
 {% block content %}
