--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -7,6 +7,11 @@
       <h3>Fiesole, Italia</h3>
       </a>
     </div>
+
+    {% set section = craft.request.getSegment(1) %}
+    {% set subsection = craft.request.getSegment(2) %}
+
+    {% if section != 'commerce' or subsection == 'cart' %}
     <ul class="navigation">
       <li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'about' %}class="active"{% endif %}>{{"About" | translate}}</a></li>
       <li><a href="{{ url('philosophy') }}" {% if craft.request.getSegment(1) == 'philosophy' %}class="active"{% endif %}>{{"Philosophy" | translate}}</a></li>
@@ -22,10 +27,12 @@
       </ul>
       <div class="cart">
         {% set cart = craft.commerce.cart %}
-        <a class="button {% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
+        <a class="{% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
           <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
         </a>
       </div>
     </div>
+    {% endif %}
+
   </div>
 </nav>
