--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -18,6 +18,10 @@
 	<script src="/javascript/main.js"></script>
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
+	{% if craft.request.getSegment(1) == "commerce" %}
+		<link rel="stylesheet" href="/commerce/style.css" type="text/css">
+	{% endif %}
+
 </head>
 
 <body id="{% if craft.request.getSegment(1) %}{{craft.request.getSegment(1)}}{% else %}home{% endif %}" >
