--- a/craft/templates/commerce/_layouts/main.html
+++ b/craft/templates/commerce/_layouts/main.html
@@ -19,15 +19,14 @@
 
 </head>
 <body>
-<!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-<![endif]-->
+
+{% set cart = craft.commerce.cart %}
 
 {% block header %}
 	<div id="header" class="container">
 		<div class="row">
 			<div class="twelve columns">
-				<a href="{{ url('commerce') }}">{%- include "commerce/_images/logo" with {'class': 'logo'} -%}</a>
+				<a href="{{ url('/') }}">Home</a>
 
 				{% include "commerce/_includes/nav" %}
 
