--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -22,7 +22,7 @@
       </ul>
       <div class="cart">
         {% set cart = craft.commerce.cart %}
-        <a class="button {% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
+        <a class="{% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
           <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
         </a>
       </div>
