--- a/craft/templates/commerce/_layouts/main.html
+++ b/craft/templates/commerce/_layouts/main.html
@@ -22,6 +22,8 @@
 
 {% set cart = craft.commerce.cart %}
 
+{% include 'partials/nav.html' %}
+
 {% block header %}
 	<div id="header" class="container">
 		<div class="row">
@@ -50,5 +52,8 @@
 		{% endblock %}
 	</div>
 {% endblock %}
+
+{% include 'partials/footer.html' %}
+
 </body>
 </html>
