--- a/craft/templates/commerce/checkout/index.html
+++ b/craft/templates/commerce/checkout/index.html
@@ -2,7 +2,7 @@
   {% redirect 'commerce/checkout/addresses' %}
 {% endif %}
 
-{% extends 'commerce/_layouts/checkout' %}
+{% extends "_layouts/_checkout" %}
 
 {% block content %}
 
