--- a/craft/templates/commerce/customer/order.html
+++ b/craft/templates/commerce/customer/order.html
@@ -1,4 +1,4 @@
-{% extends 'commerce/_layouts/main' %}
+{% extends "_layouts/_commerce" %}
 
 {% set number = craft.request.param('number') %}
 {% set order = craft.commerce.orders.number(number).first() %}
