--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -8,8 +8,10 @@
       </a>
     </div>
 
-    {% set page = craft.request.getSegment(1) %}
-    {% if page != 'commerce' %}
+    {% set section = craft.request.getSegment(1) %}
+    {% set subsection = craft.request.getSegment(2) %}
+
+    {% if section != 'commerce' or subsection == 'cart' %}
     <ul class="navigation">
       <li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'about' %}class="active"{% endif %}>{{"About" | translate}}</a></li>
       <li><a href="{{ url('philosophy') }}" {% if craft.request.getSegment(1) == 'philosophy' %}class="active"{% endif %}>{{"Philosophy" | translate}}</a></li>
