--- a/craft/templates/_layouts/_commerce.html
+++ b/craft/templates/_layouts/_commerce.html
@@ -15,20 +15,22 @@
   <link rel="stylesheet" type='text/css' href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600'>
   <link rel="stylesheet" type='text/css' href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
-  <link rel="stylesheet" type='text/css' href="{{ url('commerce/style.css') }}">
+  <link rel="stylesheet" type='text/css' href="{{ url('/css/shared.css') }}">
+  <link rel="stylesheet" type='text/css' href="{{ url('/css/store.css') }}">
 
 </head>
-<body>
+<body id="commerce">
 
   {% set cart = craft.commerce.cart %}
 
-  {% include 'partials/nav.html' %}
+  <header id="header">
+    {% include 'partials/nav.html' %}
+  </header>
 
   {% block header %}
   <div id="header" class="container">
     <div class="row">
       <div class="twelve columns">
-        <a href="{{ url('/') }}">Home</a>
 
         {% include "commerce/_includes/nav" %}
 
